# GrayCode

./: .gitignore  CMakeLists.txt  README.md
src/: cvUtils.cpp  cvutils.h  graycode.cpp  graycode.h  test.cpp
